# ceorater-cli

./: .gitignore  README.md  pyproject.toml
ceorater/: __init__.py  __main__.py  cli.py  client.py  config.py
