[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceorater"
version = "0.1.0"
description = "CLI for CEORater — institutional-grade CEO performance analytics"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [{name = "Jon Maietta", email = "support@ceorater.com"}]
keywords = ["ceo", "finance", "investing", "analytics", "sec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://www.ceorater.com"
Documentation = "https://www.ceorater.com/api-docs.html"
Support = "https://www.ceorater.com/support.html"

[project.scripts]
ceorater = "ceorater.cli:main"
